# SS

./: .gitignore  Language Design Guidelines.md  README.md  spec.md  syntatic grammar.bnf
JS/src/: index.js
SS code for testing/: README.md
SS code for testing/type checker/: type table scoping.ss
Simply Typed Lambda Calculus/: .eslintrc.js  README.md  package-lock.json  package.json  prettierrc.js
Simply Typed Lambda Calculus/src/: ast.js  check.js  compile.js  eval.js  index.js  symbol-table.js
docs/: Function declaration keyword.md
ri/: Cargo.toml  README.md
ri/src/: cli.rs  hash.rs  keywords.rs  main.rs  token.rs  token_type.rs
ri/src/callables/native/: mod.rs
ri/src/environment/: environment.rs  mod.rs
ri/src/interpreter/: error.rs  interpreter.rs
ri/src/parser/: error.rs  expr.rs  parser_struct.rs  parsing_traits.rs  stmt.rs  utility_traits.rs
ri/src/resolver/: README.md  error.rs  resolver.rs  utility.rs
ri/src/scanner/: error.rs  scanner.rs  scanner_struct.rs  utility_traits.rs
ri/src/type_checker/: README.md  error.rs  mod.rs  structs.rs  type_checker.rs  type_table.rs  utility.rs
ri/src/value/: README.md  function.rs  value.rs
rust/: Cargo.toml  README.md  rustfmt.toml
rust/src/: Keywords.rs  ScalarTypes.rs  Token.rs  TokenType.rs  keywords.rs  literal.rs  main.rs  mod.rs  parser.rs  scanner.rs  token.rs  token_type.rs
rvm/: Cargo.toml  README.md
rvm/src/: chunk.rs  debug.rs  error.rs  keywords.rs  main.rs  opcode.rs  value.rs  (+1 more)
vsce/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  quickstart-guide.md
(+45 files in other folders)
