[package]
name = "simple_script"
description = "Compiler toolchain for SimpleScript"
version = "0.1.0"
authors = ["Jaime <jaimeloeuf@gmail.com>"]
edition = "2018"


[dependencies]
# Clap is used for the tool's CLI
clap = { version = "4.0", features = ["derive"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html